tests/fail/empty_expression_tag.rs
use gpui_markup::ui;

fn main() {
    // Should fail: expression without braces at top level
    let _ = ui! { Button::new() };
}
