tests/fail/empty_expression_tag.stderr
error: expression element requires braces: `expr { }`
 --> tests/fail/empty_expression_tag.rs:5:19
  |
5 |     let _ = ui! { Button::new() };
  |                   ^^^^^^^^^^^^^
